# nll-souffle

./: .gitignore  Cargo.toml  README.md  regions.dl
souffle/issue-47680/: test.txt
souffle/problem-case-1/: test.txt
soufle/carry-nest/: test.txt
src/: facts.rs  intern.rs  ir.rs  lower.rs  main.rs  parser.lalrpop  parser.rs  solve.rs  tab_delim.rs  tests.rs
tests/carry-nest/: test.txt
tests/issue-47680/: test.txt
tests/problem-case-1/: test.txt
