[package]
name = "nll-souffle"
version = "0.1.0"
authors = ["Niko Matsakis <niko@alum.mit.edu>"]

[build-dependencies] # <-- We added this and everything after!
lalrpop = "0.15.0"

[dev-dependencies]
assert_cli = "0.5.4"

[dependencies]
lalrpop-util = "0.15.0"
regex = "0.2.1"
abomonation = "0.5.0"
abomonation_derive = "0.3.0"
differential-dataflow = "0.5.0"
timely = "0.5.1"